# jeomjwabot

./: .gitignore  CLAUDE.md  Cargo.toml  README-braille.md  README.md  index.html  styles.css
.claude/: settings.json
.claude/agents/: accessibility-auditor.md  leptos-reviewer.md  rust-backend-reviewer.md  tauri-ipc-reviewer.md
.claude/commands/: a11y-audit.md  braille-sync.md  check.md  leptos-audit.md  setup-shared.md
docs/devices/: braille-emotion.md  braillesense-6.md  dot-pad.md
references/: chzzk-authorization.md  chzzk-input.md  chzzk-live.md  chzzk.md  cime-authentication.html  cime-chat.html  cime-donation.html  cime-input.html  cime-live-api.html  cime-sessions.html  cime-subscription.html
shared/: Cargo.toml
shared/src/: device.rs  error.rs  event.rs  lib.rs  oauth.rs  onboarding.rs  platform.rs  settings.rs  summary.rs
src/: CLAUDE.md  app.rs  ipc.rs  main.rs
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  lib.rs  main.rs  mock.rs  secrets.rs  state.rs
src-tauri/src/commands/: llm.rs  mod.rs  oauth.rs  settings.rs  sources.rs
src-tauri/src/llm/: claude_code_backend.rs  mistralrs_backend.rs  mock.rs  mod.rs
src-tauri/src/oauth/: cime.rs  loopback.rs  mod.rs
src-tauri/src/ws/: chzzk.rs  cime.rs  engineio.rs  mod.rs  reconnect.rs
src/components/: announcer.rs  connection_status.rs  device_picker.rs  device_switcher.rs  event_log.rs  mod.rs  onboarding.rs  runtime_view.rs  settings.rs  summary_panel.rs
